fix word break in scenarion

--- a/src/common.blocks/scenario.scss
+++ b/src/common.blocks/scenario.scss
@@ -30,7 +30,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1em;
     color: #444;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   &__input {
